changed some codes and updated menu

--- a/Ordering System/Web.config
+++ b/Ordering System/Web.config
@@ -11,7 +11,7 @@
 		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
 	</appSettings>
 	<connectionStrings>
-		<add name="cs" connectionString="Data Source=.; Initial Catalog=OrderingDB; Integrated Security=True;MultipleActiveResultSets=true;"
+		<add name="cs" connectionString="Data Source=DESKTOP-0U13NGD; Initial Catalog=OrderingDB; Integrated Security=True;MultipleActiveResultSets=true;"
 			providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	
