--- a/Ordering System/Web.config
+++ b/Ordering System/Web.config
@@ -5,13 +5,14 @@
   -->
 <configuration>
 	<!--DESKTOP-0U13NGD-->
+	<!--WIN-MRU6HRNN4PO-->
 	<appSettings>
 		<add key="username" value="Admin"/>
 		<add key="password" value="123"/>
 		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
 	</appSettings>
 	<connectionStrings>
-		<add name="cs" connectionString="Data Source=WIN-MRU6HRNN4PO; Initial Catalog=OrderingDB; Integrated Security=True;MultipleActiveResultSets=true;"
+		<add name="cs" connectionString="Data Source=DESKTOP-0U13NGD; Initial Catalog=OrderingDB; Integrated Security=True;MultipleActiveResultSets=true;"
 			providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	
