--- a/Ordering System/Web.config
+++ b/Ordering System/Web.config
@@ -11,7 +11,7 @@
 		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
 	</appSettings>
 	<connectionStrings>
-		<add name="cs" connectionString="Data Source=WIN-MRU6HRNN4PO; Initial Catalog=OrderingDB; Integrated Security=True;MultipleActiveResultSets=true;"
+		<add name="cs" connectionString="Data Source=LAPTOP-9CLL79QE\SQLEXPRESS; Initial Catalog=OrderingDB; Integrated Security=True;MultipleActiveResultSets=true;"
 			providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	
